--- a/TankWar1.9/bin/.gitignore
+++ b/TankWar1.9/bin/.gitignore
@@ -7,3 +7,7 @@
 /TankClient$PaintThread.class
 /TankClient.class
 /Direction.class
+/TankServer.class
+/Snippet.class
+/NetClinet.class
+/NetClient.class
